# MLOps_exam_project

./: .$Architecture.drawio.bkp  .$Planning-diagram.drawio.bkp  .$Planning-diagram.drawio.dtmp  .$Unavngivet diagram.drawio.bkp  .gitattributes  .gitignore  .pre-commit-config.yaml  Architecture.drawio  Hydra_test.py  LICENSE  README.md  Unavngivet diagram.drawio  cloudbuild.yaml  policy.yaml  pyproject.toml  report.html  settings.json  tasks.py
.github/workflows/: lint.yml  precommit.yml
configs/: cloudbuild.yaml  config.yaml  sweep.yaml
configs/config_env/: local.yaml
configs/model/: default.yaml
configs/training/: default.yaml
data/raw/: Wqt.csv
dockerfiles/: cloudtrain.dockerfile  docker_instructions.md  evaluate.dockerfile  evaluate_hydra.dockerfile  train.dockerfile  train_hydra.dockerfile  train_hydra_config_mounting.dockerfile
models/: model.pth  onnx_wine_model.onnx  onnx_wine_model.pth
outputs/2026-01-15/10-49-38/.hydra/: hydra.yaml
outputs/2026-01-15/10-49-59/.hydra/: hydra.yaml
outputs/2026-01-15/10-51-37/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-15/10-52-51/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-15/10-52-57/.hydra/: hydra.yaml
outputs/2026-01-15/10-54-18/.hydra/: hydra.yaml
outputs/2026-01-15/10-54-53/.hydra/: hydra.yaml
outputs/2026-01-15/10-55-55/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-15/10-58-06/.hydra/: hydra.yaml
reports/: README.md  report.py
reports/figures/: .$Planning-diagram.drawio.bkp  Architecture.drawio  Planning-diagram.drawio
src/mlops_exam_project/: api.py  data.py  evaluate.py  import hydra.py  model.py  model_tabular.py  src_instructions.md  train.py  visualize.py
src/mlops_exam_wandb/: evaluate_wandb.py  load_best_model_from_artifact.py  load_model_from_artifact.py  load_model_from_registry.py  model.py  train_wandb.py  visualize.py  wandb_instructions.md
tests/: locus_test_performance.py  test_api.py  test_data.py  test_evaluate.py  test_integration.py  test_model.py  test_visualize.py
